2003-08-13	Joel Sherrill <joel@OARcorp.com>

	* fsmount/.cvsignore: New file.

2003-08-06	Thomas Doerfler<Thomas.Doerfler@imd-systems.de>

	PR 369/filesystem
	* Makefile.am, shell/cmds.c, wrapup/Makefile.am: sample application to
	show the use of the DOSFS functions
	* fsmount/Makefile.am, fsmount/README, fsmount/fsmount.c,
	fsmount/fsmount.h: New files.

2003-08-05	Till Strauman <strauman@slac.stanford.edu>

	PR 436/rtems_misc
	* monitor/mon-monitor.c: monitor registered commands list manipulation bugs

2003-07-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove (Merged into ../configure.ac).
	* Makefile.am: 
	Reflect having merged configure.ac into ../configure.ac.
	* capture/config.h: New.
	* capture/Makefile.am: Add config.h.
	Reflect having merged configure.ac into ../configure.ac.
	* cpuuse/config.h: New.
	* cpuuse/Makefile.am: Add config.h.
	Reflect having merged configure.ac into ../configure.ac.
	* devnull/config.h: New.
	* devnull/Makefile.am: Add config.h.
	Reflect having merged configure.ac into ../configure.ac.
	* dummy/config.h: New.
	* dummy/Makefile.am: Add config.h.
	Reflect having merged configure.ac into ../configure.ac.
	* dumpbuf/config.h: New.
	* dumpbuf/Makefile.am: Add config.h.
	Reflect having merged configure.ac into ../configure.ac.
	* monitor/config.h: New.
	* monitor/Makefile.am: Add config.h. 
	Reflect having merged configure.ac into ../configure.ac.
	* mw-fb/config.h: New.
	* mw-fb/Makefile.am: Add config.h.
	Reflect having merged configure.ac into ../configure.ac.
	* rtmonuse/config.h: New.
	* rtmonuse/Makefile.am: Add config.h.
	Reflect having merged configure.ac into ../configure.ac.
	* serdbg/config.h: New.
	* serdbg/Makefile.am: Add config.h.
	Reflect having merged configure.ac into ../configure.ac.
	* shell/config.h: New.
	* shell/Makefile.am: Add config.h.
	Reflect having merged configure.ac into ../configure.ac.
	* stackchk/config.h: New.
	* stackchk/Makefile.am: Add config.h.